--- a/PlanXFrontend/PlanXFrontend.csproj
+++ b/PlanXFrontend/PlanXFrontend.csproj
@@ -56,11 +56,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.80" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.80" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="Syncfusion.Maui.Calendar" Version="26.2.8" />
+		<PackageReference Include="Syncfusion.Maui.Calendar" Version="26.2.9" />
 		<PackageReference Include="Syncfusion.Maui.Scheduler" Version="26.2.9" />
 		<PackageReference Include="Syncfusion.Schedule.Windows" Version="26.2.9" />
 	</ItemGroup>
