Cambio a DB en la nube

--- a/PlanX_BE/app.config
+++ b/PlanX_BE/app.config
@@ -18,6 +18,9 @@
         <add name="PlanXBackend.Properties.Settings.PLANXAPPConnectionString4"
             connectionString="Data Source=(localdb)\BrandonZamora;Initial Catalog=PLANXAPP;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
+        <add name="PlanXBackend.Properties.Settings.PLANXAPPConnectionString5"
+            connectionString="Data Source=proyecto-movil.database.windows.net;Initial Catalog=PLANXAPP;Persist Security Info=True;User ID=Admin123;Password=Password98765;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
