--- a/PlanXFrontend/PlanXFrontend.csproj
+++ b/PlanXFrontend/PlanXFrontend.csproj
@@ -69,4 +69,10 @@
 	  <Folder Include="Resources\Images\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="DefineEventPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
