--- a/PlanX_BE/PlanX_BE.csproj
+++ b/PlanX_BE/PlanX_BE.csproj
@@ -101,12 +101,15 @@
     <Compile Include="Entidades\Entities\Registro.cs" />
     <Compile Include="Entidades\Entities\Tarea.cs" />
     <Compile Include="Entidades\Entities\Usuario.cs" />
+    <Compile Include="Entidades\Request\ReqEvento\ReqActualizarEvento.cs" />
     <Compile Include="Entidades\Request\ReqEvento\ReqDefinirEvento.cs" />
     <Compile Include="Entidades\Request\ReqEvento\ReqEliminarEvento.cs" />
     <Compile Include="Entidades\Request\ReqEvento\ReqObtenerEvento.cs" />
     <Compile Include="Entidades\Request\ReqEvento\ReqObtenerListaEvento.cs" />
     <Compile Include="Entidades\Request\ReqEvento\ReqRegistroEventoRegular.cs" />
     <Compile Include="Entidades\Request\ReqObtenerRegistros.cs" />
+    <Compile Include="Entidades\Request\ReqTarea\ReqActualizarTarea.cs" />
+    <Compile Include="Entidades\Request\ReqTarea\ReqEliminarTarea.cs" />
     <Compile Include="Entidades\Request\ReqTarea\ReqObtenerTarea.cs" />
     <Compile Include="Entidades\Request\ReqUsuario\ReqActualizarUsuario.cs" />
     <Compile Include="Entidades\Request\ReqUsuario\ReqEliminarUsuario.cs" />
@@ -114,12 +117,14 @@
     <Compile Include="Entidades\Request\ReqTarea\ReqInsertarTarea.cs" />
     <Compile Include="Entidades\Request\ReqUsuario\ReqInsertarUsuario.cs" />
     <Compile Include="Entidades\Request\ReqLogin.cs" />
+    <Compile Include="Entidades\Response\ResEvento\ResActualizarEvento.cs" />
     <Compile Include="Entidades\Response\ResEvento\ResDefinirEvento.cs" />
     <Compile Include="Entidades\Response\ResEvento\ResEliminarEvento.cs" />
     <Compile Include="Entidades\Response\ResEvento\ResObtenerEvento.cs" />
     <Compile Include="Entidades\Response\ResEvento\ResObtenerListaEvento.cs" />
     <Compile Include="Entidades\Response\ResEvento\ResRegistroEventoRegular.cs" />
     <Compile Include="Entidades\Response\ResObtenerRegistros.cs" />
+    <Compile Include="Entidades\Response\ResTarea\ResActualizarTarea.cs" />
     <Compile Include="Entidades\Response\ResTarea\ResObtenerTarea.cs" />
     <Compile Include="Entidades\Response\ResUsuario\ResActualizarUsuario.cs" />
     <Compile Include="Entidades\Response\ResBase.cs" />
@@ -128,6 +133,7 @@
     <Compile Include="Entidades\Response\ResUsuario\ResEliminarUsuario.cs" />
     <Compile Include="Entidades\Response\ResUsuario\ResInsertarUsuario.cs" />
     <Compile Include="Entidades\Response\ResLogin.cs" />
+    <Compile Include="Logica\Encriptador.cs" />
     <Compile Include="Logica\LogEvento.cs" />
     <Compile Include="Logica\LogLogin.cs" />
     <Compile Include="Logica\LogRegistro.cs" />
