--- a/PlanXFrontend/PlanXFrontend.csproj
+++ b/PlanXFrontend/PlanXFrontend.csproj
@@ -74,6 +74,9 @@
 	  <MauiXaml Update="DefineEventPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="View\PopupDetailTask.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
